# nlp100

./: .env  .gitignore  Dockerfile  LICENSE  README.md  chapter01.ipynb  chapter02.ipynb  chapter03.ipynb  chapter04.ipynb  chapter06.ipynb  chapter07.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
2015/: chapter01.ipynb  chapter02.ipynb  chapter03.ipynb  chapter04.ipynb  chapter06.ipynb  chapter07.ipynb
2015/data/chapter02/: .gitignore
docker/corenlp/: Dockerfile
docker/mecab/: Dockerfile  README.md  requirements.txt  server.py
