[tool.poetry]
name = "nlp100"
version = "0.1.0"
description = ""
authors = ["ayatk <ayatk@ayatk.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
requests = "^2.25.1"
redis = "^3.5.3"
nltk = "^3.5"
pydot = "^1.4.1"
jupyterlab = "^3.0.3"
pymongo = "^3.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
